# c3-dashboard

./: CONTRIBUTING.md  README.md  c3-sdk.readme.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  test.py
app/: layout.tsx
app/(dashboard)/: layout.tsx  page.tsx
app/(dashboard)/alerts/: page.tsx
c3-ai/backend/: main.py
c3-ai/ml/: README.md  main.py  requirements.txt
c3-sdk/backend/: README.md  main.py
c3-sdk/cpp/: CMakeLists.txt  README.md
c3-sdk/flutter/: README.md  pubspec.yaml
c3-sdk/nodejs/: README.md  example.ts  package.json  tsconfig.json
c3-sdk/python/: README.md  example.py  setup.py
c3-sdk/ros/: CMakeLists.txt  README.md  package.xml
c3-sdk/ros/src/: c3_ros_node_main.cpp  hub_c3_ros_node.cpp  video_stream_node.cpp
components/: ai-hazard-mapping.tsx  alerts-table.tsx  area-sensing-map.tsx  building-damage-detection.tsx  dashboard-header.tsx  dashboard-shell.tsx  database-explorer.tsx  deployments-table.tsx  devices-table.tsx  events-table.tsx  google-map.tsx  header.tsx  lora-mesh-simulator.tsx  osm-map.tsx  settings-form.tsx  sidebar.tsx  teams-table.tsx
components/dashboard/: device-status.tsx  event-timeline.tsx  overview.tsx  recent-alerts.tsx
components/ui/: badge-variants.tsx  badge.tsx
hooks/: use-mobile.tsx
lib/: heatmap-utils.ts  map-styles.ts  supabase-schema.ts  supabase-service.ts  utils.ts
pages/api/: hazard-mapping.ts
services/: supabase-service.ts
types/: google-maps-heatmap.d.ts  google-maps.d.ts  leaflet-heat.d.ts  marker-clusterer.d.ts  osmbuildings.d.ts  tf-depth-estimation.d.ts
(+55 files in other folders)
